--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,7 @@
+/* This allows iframes to get the correct theme, they would only use a light theme otherwise. */
+iframe {
+	color-scheme: light dark;
+}
 
 html body {
 	background-color: var(--mooie-bg-color);
